force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>This Object is used to hold Invoice and Credit Memo details to be synced from NS</description>
    <label>Invoice/Credit Memo</label>
    <nameField>
        <displayFormat>INV/CM-{0000}</displayFormat>
        <label>Invoice/CM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>