force-app/main/default/objects/Invoice__c/fields/Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due__c</fullName>
    <description>Amount Due for invoice related to SO from NS</description>
    <inlineHelpText>Amount Due for invoice related to SO from NS</inlineHelpText>
    <label>Amount Due/CM Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>