force-app/main/default/objects/Invoice__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Invoice or Credit Memo</description>
    <inlineHelpText>Description of Invoice or Credit Memo</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>