force-app/main/default/objects/Invoice__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Invoice due date for SO in NS</description>
    <inlineHelpText>Invoice due date for SO in NS</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>