force-app/main/default/objects/Invoice__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Invoice/Credit Memo created date from NS</description>
    <inlineHelpText>Invoice/Credit Memo created date from NS</inlineHelpText>
    <label>Invoice/Credit Memo Date</label>
    <type>Date</type>
</CustomField>