force-app/main/default/objects/Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Invoice/Credit Memo Id from NS</description>
    <inlineHelpText>Invoice/Credit Memo Id from NS</inlineHelpText>
    <label>Invoice/CM Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>