force-app/main/default/objects/Invoice__c/fields/Invoice_PDF_Link__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PDF_Link__c</fullName>
    <description>PDF Link for Invoice from NS</description>
    <inlineHelpText>PDF Link for Invoice from NS</inlineHelpText>
    <label>Invoice PDF Link</label>
    <type>Url</type>
</CustomField>