force-app/main/default/objects/Invoice__c/fields/Netsuite_Credit_Memo_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Credit_Memo_Record_Link__c</fullName>
    <description>Link to the Credit Memo in Netsuite</description>
    <formula>IF(ISBLANK(Netsuite_ID__c) || BEGINS(Invoice_Number__c,&quot;IN&quot;),Null,HYPERLINK(&quot;https://5606916-sb1.app.netsuite.com/app/accounting/transactions/custcred.nl?id=&quot;&amp;Netsuite_ID__c,&quot;NetSuite URL for this record&quot;,&apos;_blank&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to the Credit Memo in Netsuite</inlineHelpText>
    <label>Netsuite Credit Memo Record Link</label>
    <type>Text</type>
</CustomField>