force-app/main/default/objects/Invoice__c/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <description>The Invoice or Credit Memo&apos;s corresponding Netsuite ID.Synced directly from Netsuite.</description>
    <inlineHelpText>The Invoice or Credit Memo&apos;s corresponding Netsuite ID.Synced directly from Netsuite.</inlineHelpText>
    <label>Netsuite ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>