force-app/main/default/objects/Invoice__c/fields/Posting_Period__c.field-meta.xml
<CustomField>
    <fullName>Posting_Period__c</fullName>
    <description>Period of creating Invoice or Credit memo</description>
    <inlineHelpText>Period of creating Invoice or Credit memo</inlineHelpText>
    <label>Posting Period</label>
    <length>25</length>
    <type>Text</type>
</CustomField>